Fix month names appearing multiple times

Patch by Sergey Ivanov, thanks!
BUG: 271347
FIXED-IN: 4.6.3
(cherry picked from commit 9f7171aa55664bcdd0e03d5a39d8d5491ba607c8)